syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.example.grpc";

message CreateProduct {

  string name = 1;
  double price = 2;

}

message CreateProductResponse {

  string id = 1;
  string name = 2;
  double price = 3;

}

service ProductService {

  rpc create(CreateProduct) returns (CreateProductResponse);

}